--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 keras==3.10.0
 libclang==18.1.1
@@ -34,10 +35,14 @@ numpy==2.1.3
 opt_einsum==3.4.0
 optree==0.16.0
 packaging==25.0
+pluggy==1.6.0
 protobuf==5.29.5
 pydantic==2.11.7
+pydantic-settings==2.10.0
 pydantic_core==2.33.2
 Pygments==2.19.2
+pytest==8.4.1
+pytest-asyncio==1.0.0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
@@ -53,6 +58,7 @@ tensorboard-data-server==0.7.2
 tensorflow==2.19.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.1.0
+tomli==2.2.1
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
