--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.9.0
+APScheduler==3.11.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
@@ -41,6 +42,8 @@ tomli==2.2.1
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+tzdata==2025.2
+tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.34.3
 watchfiles==1.1.0
